Finishing zombiejs test

--- a/TestingWithZombieJS/site/tpl/loginForm.html
+++ b/TestingWithZombieJS/site/tpl/loginForm.html
@@ -1,8 +1,7 @@
 <form method="post">
-	<legend>Login</legend>
 	<input type="text" name="username" placeholder="your username here" />
 	<br />
 	<input type="password" name="password" />
 	<br />
-	<button type="submit" class="btn">Submit</button>
+	<input type="submit" class="btn" value="Login" />
 </form>
