New article about SASS

--- a/StayTuned/post.html
+++ b/StayTuned/post.html
@@ -80,6 +80,16 @@
 
 <p>Videos: <a href="https://vimeo.com/build">https://vimeo.com/build</a></p>
 
+<h2 id="webshaped">An event apart</h2>
+
+<p><img src="http://krasimirtsonev.com/blog/articles/StayTuned/img/anevetnapart.jpg" alt="Stay tuned / conferences that you should know about" /></p>
+
+<p>An Event Apart is an intensely educational two-day learning session for passionate practitioners of standards-based web design.</p>
+
+<p>Official page: <a href="http://aneventapart.com/">http://aneventapart.com/</a></p>
+
+<p>Videos: <a href="https://vimeo.com/zeldman">https://vimeo.com/zeldman</a></p>
+
 <h2 id="webshaped">Webshaped</h2>
 
 <p><img src="http://krasimirtsonev.com/blog/articles/StayTuned/img/webshaped.jpg" alt="Stay tuned / conferences that you should know about" /></p>
