New blog post about simple php captcha

--- a/SASScontentdirective/post.html
+++ b/SASScontentdirective/post.html
@@ -1,4 +1,4 @@
-<p>I just started using <a href="http://sass-lang.com/">SASS</a> and I love it. A bunch of cool features, which will help me to improve my CSS coding. <a href="http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#mixin-content">@content</a> directive is one of them.</p>
+<p>I just started using <a href="http://sass-lang.com/">SASS</a> and I love it. A bunch of cool features, which will help me to improve my CSS coding. <a href="http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#mixin-content">@content</a> directive is one of them.</p>[STOP]
 
 <p>&nbsp;</p>
 
