--- a/LookMaJavaScriptOnlyOffCanvas/code/index.html
+++ b/LookMaJavaScriptOnlyOffCanvas/code/index.html
@@ -13,6 +13,7 @@
 				margin: 0;
 				height: 0;
 				font-size: 20px;
+				font-family: Arial;
 			}
 			.content {
 				max-width: 720px;
@@ -26,6 +27,18 @@
 			<h1>Look ma, JavaScript only<br />Off-Canvas menu</h1>
 			<section>
 				<p>No CSS, only JavaScript. Made with <a href="http://absurdjs.com/">AbsurdJS</a>.</p>
+			</section>
+			<section>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, rem, porro, alias, repellat facilis dolorem aliquam nobis totam repellendus eligendi magni repudiandae itaque libero vero error ipsa voluptatum esse autem?</p>
+			</section>
+			<section>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, rem, porro, alias, repellat facilis dolorem aliquam nobis totam repellendus eligendi magni repudiandae itaque libero vero error ipsa voluptatum esse autem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, rem, porro, alias, repellat facilis dolorem aliquam nobis totam repellendus eligendi magni repudiandae itaque libero vero error ipsa voluptatum esse autem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, rem, porro, alias, repellat facilis dolorem aliquam nobis totam repellendus eligendi magni repudiandae itaque libero vero error ipsa voluptatum esse autem?</p>
+			</section>
+			<section>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, rem, porro, alias, repellat facilis dolorem aliquam nobis totam repellendus eligendi magni repudiandae itaque libero vero error ipsa voluptatum esse autem?</p>
+			</section>
+			<section>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, rem, porro, alias, repellat facilis dolorem aliquam nobis totam repellendus eligendi magni repudiandae itaque libero vero error ipsa voluptatum esse autem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, rem, porro, alias, repellat facilis dolorem aliquam nobis totam repellendus eligendi magni repudiandae itaque libero vero error ipsa voluptatum esse autem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, rem, porro, alias, repellat facilis dolorem aliquam nobis totam repellendus eligendi magni repudiandae itaque libero vero error ipsa voluptatum esse autem?</p>
 			</section>
 			<section>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, rem, porro, alias, repellat facilis dolorem aliquam nobis totam repellendus eligendi magni repudiandae itaque libero vero error ipsa voluptatum esse autem?</p>
