--- a/NoBackendBlogSolutionWithNodejsAndMarkdown/post.html
+++ b/NoBackendBlogSolutionWithNodejsAndMarkdown/post.html
@@ -5,7 +5,9 @@
 
 <p>The idea is simple. We write Markdown files and by running the <i>techy</i> command in the terminal these files are converted to beautifully looking HTML pages. The final result of this article could be seen <a href="http://krasimir.github.io/techy-simple-blog/">here</a>. The home page of the blog looks like that:</p>
 
+<p>&nbsp;</p>
 <p><img src="http://krasimirtsonev.com/blog/articles/NoBackendBlogSolutionWithNodejsAndMarkdown/preview.jpg" /></p>
+<p>&nbsp;</p>
 
 <p>So, we have articles. These articles have title, date and tags attached. There are two types of pages. </p>
 
@@ -348,7 +350,9 @@ noSave: true
 
 <p>To compile everything we need to execute one more time <i>techy</i> in the <i>blog</i> folder. The output in the console should be:</p>
 
+<p>&nbsp;</p>
 <p><img src="http://krasimirtsonev.com/blog/articles/NoBackendBlogSolutionWithNodejsAndMarkdown/output.jpg" /></p>
+<p>&nbsp;</p>
 
 <h2>
 <a name="user-content-summary" class="anchor" href="#summary"><span class="octicon octicon-link"></span></a>Summary</h2>
